err/notifiers.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/notifiers'...
Compiling './lib/python3.5/site-packages/notifiers/core.py'...
***   File "./lib/python3.5/site-packages/notifiers/core.py", line 35
    return f'<Response,provider={self.provider.capitalize()},status={self.status}>'
                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifiers/exceptions.py'...
***   File "./lib/python3.5/site-packages/notifiers/exceptions.py", line 15
    return f'<NotificationError: {self.message}>'
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/notifiers/providers'...
Compiling './lib/python3.5/site-packages/notifiers/providers/email.py'...
***   File "./lib/python3.5/site-packages/notifiers/providers/email.py", line 14
    DEFAULT_FROM = f'{getpass.getuser()}@{socket.getfqdn()}'
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifiers/providers/gitter.py'...
***   File "./lib/python3.5/site-packages/notifiers/providers/gitter.py", line 52
    return {'Authorization': f'Bearer {token}'}
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifiers/providers/hipchat.py'...
***   File "./lib/python3.5/site-packages/notifiers/providers/hipchat.py", line 221
    'maxLength': 10_000,
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifiers/providers/slack.py'...
***   File "./lib/python3.5/site-packages/notifiers/providers/slack.py", line 151
    icon_emoji = f':{icon_emoji}'
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/notifiers/utils'...
Listing './lib/python3.5/site-packages/notifiers-0.6.3.dist-info'...
Listing './lib/python3.5/site-packages/notifiers_cli'...
Compiling './lib/python3.5/site-packages/notifiers_cli/core.py'...
***   File "./lib/python3.5/site-packages/notifiers_cli/core.py", line 72
    click.echo(f"Name: '{name}', Schema: {schema}")
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/notifiers_cli/providers'...
Compiling './lib/python3.5/site-packages/notifiers_cli/providers/gitter.py'...
***   File "./lib/python3.5/site-packages/notifiers_cli/providers/gitter.py", line 22
    click.echo(f'Room ID: {room["id"]} - Name: {room["name"]}')
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifiers_cli/providers/hipchat.py'...
***   File "./lib/python3.5/site-packages/notifiers_cli/providers/hipchat.py", line 26
    click.echo(f'Room name: {room["name"]} - ID: {room["id"]}')
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifiers_cli/providers/join.py'...
***   File "./lib/python3.5/site-packages/notifiers_cli/providers/join.py", line 20
    click.echo(f'Device name: {device["deviceName"]} - ID: {device["deviceId"]}')
                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifiers_cli/providers/pushbullet.py'...
***   File "./lib/python3.5/site-packages/notifiers_cli/providers/pushbullet.py", line 21
    click.echo(f'Nickname: {device["nickname"]} - Iden: {device["iden"]}')
                                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/notifiers_cli/providers/telegram.py'...
***   File "./lib/python3.5/site-packages/notifiers_cli/providers/telegram.py", line 20
    click.echo(f'Bot has not active chats! Send it ANY message and try again')
                                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
